@@ -31,6 +31,7 @@ false
 fmt
 fold
 fs.h
+fs-is-local.h
 getlimits
 ginstall
 groups
